# Athenna.Rs

./: Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
src/: activations.rs  lib.rs  nn.rs
