[package]
name = "athenna"
version = "0.1.0"
authors = ["ikcore"]
edition = "2018"
license = "GPL-3.0-only"
description = "Athenna is a light weight highly performant neural net framework for creating and using AI's cross platform and language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"