[package]
name = "athenna"
version = "0.1.1"
authors = ["ikcore"]
edition = "2018"
license = "GPL-3.0-only"
description = "Athenna is a light weight highly performant neural net framework for creating and using AI's cross platform and language"
repository = "https://github.com/ikcore/Athenna.Rs.git"
homepage = "https://github.com/ikcore/Athenna.Rs"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"